[package]
name = "leptos-start-trunk"
# name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.4", features = ["csr", "nightly"] }
leptos_meta = { version = "0.5.4", features = ["nightly", "csr"] }
leptos_router = { version = "0.5.4", features = ["csr", "nightly"] }
