[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = "{{authors}}"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.4", features = ["csr", "nightly"] }
leptos_meta = { version = "0.5.4", features = ["nightly", "csr"] }
leptos_router = { version = "0.5.4", features = ["csr", "nightly"] }
web-sys = { version = "0.3.67", features = ["Document", "Window"] }
